--- a/public/home.html
+++ b/public/home.html
@@ -6,32 +6,59 @@
     <title>Séries</title>
 </head>
 <body>
+    <H2>Série:</H2>
     <form>
         <div>
-            <label>Nome da série</label>
+            <label>Nome da série:</label>
             <input name="nomes">
         </div>
         <div>
-            <label>Quantidade de epis</label>
-            <input name="nomes">
+            <label>Gênero:</label>
+            <input name="gen">
         </div>
         <div>
-            <button>cadastrar</button>
+            <label>Quantidade de episódios:</label>
+            <input name="qtd">
+        </div>
+        <div>
+            <label>Ano de Lançamento:</label>
+            <input name="lan">
+        </div>
+        <div>
+            <button>cadastrar:</button>
         </div>
     </form>
+    <H2>Diretor:</H2>
     <form>
         <div>
-            <label>Diretor</label>
+            <label>Nome do diretor:</label>
             <input name="dir">
         </div>
         <div>
+            <label>Data de nascimento:</label>
+            <input type="date" name="nasc">
+        </div>
+        <div>
+            <label>Nacionalidade:</label>
+            <input name="naci">
+        </div>
+        <div>
             <button>cadastrar</button>
         </div>
     </form>
+    <H2>Personagem:</H2>
     <form>
         <div>
-            <label>Personagem principal</label>
+            <label>Nome do personagem:</label>
             <input name="pers">
+        </div>
+        <div>
+            <label>Nome do ator:</label>
+            <input name="ator">
+        </div>
+        <div>
+            <label>Descrição:</label>
+            <input name="desc">
         </div>
         <div>
             <button>cadastrar</button>
