--- a/public/index.html
+++ b/public/index.html
@@ -36,10 +36,10 @@
             })
     
             if (resp.status == 401)
-                return alert("usuário e senha não conferem")
+                return alert("Usuário e senha não conferem")
 
             if (!resp.ok)
-                return alert("erro inesperado")
+                return alert("Erro inesperado")
 
             const respData = await resp.json()
             localStorage.setItem("token", respData.token)
