--- a/public/diretor.html
+++ b/public/diretor.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <a href="diretor.html">diretor</a>
+        <a href="personagem.html">personagem</a>
+        <a href="serie.html">serie</a>
+    </nav>
+
     <H2>Diretor:</H2>
     <form>
         <div>
@@ -24,20 +30,23 @@
             <button>cadastrar</button>
         </div>
     </form>
+    <script>
     const frm = document.querySelector("form")
         frm.addEventListener("submit", async (event) => {
             event.preventDefault()
             const diretor = frm.dir.value
-            const nasc = frm.nasc.value
-            const naci = frm.naci.value
-            const conteudo = { dir, nasc, naci }
+            const nascimento = frm.nasc.value
+            const nacionalidade = frm.naci.value
+            const conteudo = { diretor, nascimento, nascimento }
             
             await fetch("/fomr", {
                 method:  "POST",
                 headers: { 'Content-Type': "application/json" },
                 body: JSON.stringify(conteudo)
             })
+            const respData = await resp.json()
             location.href = "personagem.html"
         })
+    </script>
 </body>
 </html>
