--- a/public/home.html
+++ b/public/home.html
@@ -3,50 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Séries</title>
+    <title>Document</title>
 </head>
 <body>
-    <H2>Série:</H2>
-    <form>
-        <div>
-            <label>Nome da série:</label>
-            <input name="nomes">
-        </div>
-        <div>
-            <label>Gênero:</label>
-            <input name="gen">
-        </div>
-        <div>
-            <label>Quantidade de episódios:</label>
-            <input name="qtd">
-        </div>
-        <div>
-            <label>Ano de Lançamento:</label>
-            <input name="lan">
-        </div>
-        <div>
-            <button>cadastrar</button>
-        </div>
-    
-    <script>
-        const frm = document.querySelector("form")
-        frm.addEventListener("submit", async (event) => {
-            event.preventDefault()
-            const nomes = frm.nomes.value
-            const genero = frm.gen.value
-            const quantidadeep = frm.qtd.value
-            const ano = frm.lan.value
-            const conteudo = { nome, gen, qtd, lan }
-            
-            await fetch("/fomr", {
-                method:  "POST",
-                headers: { 'Content-Type': "application/json" },
-                body: JSON.stringify(conteudo)
-            })
-            const respData = await resp.json()
-            location.href = "diretor.html"
-        })
-    </script>
-
+    <nav>
+        <a href="diretor.html">diretor</a>
+        <a href="personagem.html">personagem</a>
+        <a href="serie.html">serie</a>
+    </nav>
 </body>
 </html>
